<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpectrumActivity">в

    <LinearLayout
        android:id="@+id/RGB_data"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_border_white"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border">

            <TextView
                android:id="@+id/colorRedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border">

            <TextView
                android:id="@+id/colorGreenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colorGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border">

            <TextView
                android:id="@+id/colorBlueLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/colorBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />
        </FrameLayout>

        <TextView
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border">

            <TextView
                android:id="@+id/CCTLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/cct"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CCT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/HSV_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_border_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hueLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/hue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/saturationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/saturation"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/saturation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/valueLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/value"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:gravity="end" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LabLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/CIElab"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CieLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:gravity="end" />
        </LinearLayout>
    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/histogram"
        android:background="@color/cardview_light_background"
        android:padding="3dp"/>

    <ImageView
        android:id="@+id/histogram"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:padding="3dp"/>
</RelativeLayout>